trying to fix off-center

--- a/public/index1.css
+++ b/public/index1.css
@@ -280,7 +280,8 @@ mark,
 }
 .text-center {
   text-align: center;
-  margin:auto;
+  justify-content: center;
+  align-items: center;
 }
 .text-justify {
   text-align: justify;
